kube-con-2019/service-tracker/data-api.yaml
---
# Source: data-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-api
  labels:
    name: data-api
spec:
  type: "ClusterIP"
  ports:
  - name: http
    port: 3009
    targetPort: 3009
  selector:
    app: data-api
---
# Source: data-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "data-api"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: data-api
  template:
    metadata:
      labels:
        app: data-api
    spec:
      containers:
        - image: "briaracr.azurecr.io/hackfest/data-api:1.0"
          imagePullPolicy: Always
          name: data-api
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          ports:
          - containerPort: 3009
            protocol: TCP
      restartPolicy: Always
