kube-con-2019/service-tracker/flights-api.yaml
---
# Source: flights-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flights-api
  labels:
    name: flights-api
spec:
  type: "ClusterIP"
  ports:
  - name: http
    port: 3003
    targetPort: 3003
  selector:
    app: flights-api
---
# Source: flights-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "flights-api"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flights-api
  template:
    metadata:
      labels:
        app: flights-api
    spec:
      containers:
        - image: "briaracr.azurecr.io/hackfest/flights-api:1.1.5"
          imagePullPolicy: Always
          name: flights-api
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 3003
            protocol: TCP
      restartPolicy: Always
