kube-con-2019/service-tracker/quakes-api.yaml
---
# Source: quakes-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quakes-api
  labels:
    name: quakes-api
spec:
  type: "ClusterIP"
  ports:
  - name: http
    port: 3012
    targetPort: 3012
  selector:
    app: quakes-api
---
# Source: quakes-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "quakes-api"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quakes-api
  template:
    metadata:
      labels:
        app: quakes-api
    spec:
      containers:
        - image: "briaracr.azurecr.io/hackfest/quakes-api:1.1.5"
          imagePullPolicy: Always
          name: quakes-api
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 3012
            protocol: TCP
      restartPolicy: Always
