kube-con-2019/service-tracker/service-tracker-ui.yaml
---
# Source: web-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-tracker-ui
  labels:
    name: service-tracker-ui
spec:
  type: "LoadBalancer"
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: service-tracker-ui
---
# Source: web-ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "service-tracker-ui"
spec:
  selector:
    matchLabels:
      app: service-tracker-ui
  template:
    metadata:
      labels:
        app: service-tracker-ui
    spec:
      containers:
        - image: "briaracr.azurecr.io/hackfest/service-tracker-ui:1.0"
          imagePullPolicy: Always
          name: service-tracker-ui
          resources:
            requests:
              memory: "512Mi"
              cpu: "1.0"
            limits:
              memory: "1024Mi"
              cpu: "2.0"
          ports:
          - containerPort: 8080
            protocol: TCP
      restartPolicy: Always
