kube-con-2019/service-tracker/weather-api.yaml
---
# Source: weather-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api
  labels:
    name: weather-api
spec:
  type: "ClusterIP"
  ports:
  - name: http
    port: 3015
    targetPort: 3015
  selector:
    app: weather-api
---
# Source: weather-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "weather-api"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-api
  template:
    metadata:
      labels:
        app: weather-api
    spec:
      containers:
        - image: "briaracr.azurecr.io/hackfest/weather-api:1.1.5"
          imagePullPolicy: Always
          name: weather-api
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 3015
            protocol: TCP
      restartPolicy: Always
